--- a/property-rental-app/angular.json
+++ b/property-rental-app/angular.json
@@ -26,10 +26,12 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css", 
-          "src/styles.css"
+              "node_modules/aos/dist/aos.css",
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+             
             ]
           },
           "configurations": {
