--- a/property-rental-app/package.json
+++ b/property-rental-app/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
