--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,19 @@
       {
         "link-name": "off"
       }
+    ],
+    "axe/aria": [
+      "default",
+      {
+        "aria-required-children": "off",
+        "aria-required-parent": "off"
+      }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
