fix(dev): added app service modules

--- a/property-rental-service/api/pom.xml
+++ b/property-rental-service/api/pom.xml
@@ -16,6 +16,9 @@
   <artifactId>api</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
+  <modules>
+    <module>checksum-api</module>
+  </modules>
   <name>api</name>
 
 </project>
