--- a/property-rental-service/core/pom.xml
+++ b/property-rental-service/core/pom.xml
@@ -16,6 +16,10 @@
   <artifactId>core</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
+  <modules>
+    <module>dao</module>
+    <module>service</module>
+  </modules>
   <name>core</name>
 
 </project>
