update api and end points'

--- a/property-rental-service/common/checksum/pom.xml
+++ b/property-rental-service/common/checksum/pom.xml
@@ -11,4 +11,5 @@
 	</parent>
 	<groupId>com.property.rental.service.common</groupId>
 	<artifactId>checksum</artifactId>
+	<packaging>jar</packaging>
 </project>
