--- a/property-rental-service/application/pom.xml
+++ b/property-rental-service/application/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>service</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.property.rental.service.common</groupId>
+			<artifactId>model</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
