--- a/property-rental-service/common/pom.xml
+++ b/property-rental-service/common/pom.xml
@@ -11,7 +11,7 @@
 		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-
+	
 	<groupId>com.property.rental.service</groupId>
 	<artifactId>common</artifactId>
 	<version>1.0.0</version>
@@ -22,6 +22,7 @@
 		<module>common-utility</module>
 		<module>checksum</module>
 		<module>model</module>
+		<module>validation</module>
 	</modules>
 
 </project>
