--- a/property-rental-service/core/service/pom.xml
+++ b/property-rental-service/core/service/pom.xml
@@ -19,5 +19,13 @@
 			<artifactId>dao</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.property.rental.service.common</groupId>
+			<artifactId>validation</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 </project>
