fix(dev): update rest api service impl

--- a/property-rental-service/core/api/pom.xml
+++ b/property-rental-service/core/api/pom.xml
@@ -15,4 +15,11 @@
 	<packaging>jar</packaging>
 	<name>api</name>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.property.rental.service.common</groupId>
+			<artifactId>model</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+	</dependencies>
 </project>
