--- a/property-rental-service/core/dao/pom.xml
+++ b/property-rental-service/core/dao/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>api</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.property.rental.service.common</groupId>
+			<artifactId>model</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
