--- a/property-rental-main-app/package.json
+++ b/property-rental-main-app/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.8",
     "tslib": "^2.3.0",
