--- a/property-rental-main-app/package.json
+++ b/property-rental-main-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
     "ngx-pagination": "^6.0.3",
