fix(rjk):fix minor issues

--- a/property-rental-service/application/src/main/resources/application.properties
+++ b/property-rental-service/application/src/main/resources/application.properties
@@ -1,2 +1,13 @@
+# Root logging level (global)
+logging.level.root=INFO
+
+# Specific package or class logging level
+logging.level.com.example.myapp=DEBUG
+logging.level.org.springframework=WARN
+
+# Log file location (optional)
+logging.file.name=C:/RajKadam/property-rental/logs/property-rental-service.log
+
 spring.application.name=property-rental-service
 spring.data.mongodb.uri=mongodb://localhost:27017/propertyRentals
+
