--- a/property-rental-main-app/angular.json
+++ b/property-rental-main-app/angular.json
@@ -10,6 +10,7 @@
           "strict": true
         }
       },
+      
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -65,6 +66,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
