fix(rjk):create navbar rest API

--- a/property-rental-service/application/src/main/resources/application.properties
+++ b/property-rental-service/application/src/main/resources/application.properties
@@ -9,5 +9,5 @@ logging.level.org.springframework=WARN
 logging.file.name=C:/RajKadam/property-rental/logs/property-rental-service.log
 
 spring.application.name=property-rental-service
-spring.data.mongodb.uri=mongodb://localhost:27017/propertyRentals
+spring.data.mongodb.uri=mongodb://localhost:27017/property-rental
 
