--- a/property-rental-service/common/checksum/pom.xml
+++ b/property-rental-service/common/checksum/pom.xml
@@ -12,4 +12,5 @@
 	<groupId>com.property.rental.service.common</groupId>
 	<artifactId>checksum</artifactId>
 	<packaging>jar</packaging>
+	<version>2.0.0</version>
 </project>
