--- a/property-rental-service/core/api/pom.xml
+++ b/property-rental-service/core/api/pom.xml
@@ -3,6 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+<!--	core project parent-->
 	<parent>
 		<groupId>com.property.rental.service</groupId>
 		<artifactId>core</artifactId>
@@ -10,15 +11,23 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+<!--	current project jar detail-->
 	<groupId>com.property.rental.service.core</groupId>
 	<artifactId>api</artifactId>
 	<packaging>jar</packaging>
 	<name>api</name>
 
+
 	<dependencies>
+<!--		use dependencies from model dependency-->
 		<dependency>
 			<groupId>com.property.rental.service.common</groupId>
 			<artifactId>model</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.property.rental.service.common</groupId>
+			<artifactId>checksum</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
