fix(rjk):login and signup done

--- a/property-rental-service/application/src/main/resources/application.properties
+++ b/property-rental-service/application/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.file.name=C:/RajKadam/property-rental/logs/property-rental-service.log
 spring.application.name=property-rental-service
 spring.data.mongodb.uri=mongodb://localhost:27017/property-rental
 
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=USER
