feat: Implement JWT authentication and authorization
- Updated login and registration processes to use JWT tokens for user authentication.
- Modified AuthService to handle token storage and login status management.
- Enhanced UserAccountService to return JWT tokens upon successful login.
- Added JwtUtil for token generation and validation.
- Introduced JwtFilter to protect API endpoints and validate tokens.
- Updated property and user account controllers to utilize new authentication methods.
- Refactored property detail service and DAO to align with new user authentication flow.
- Implemented CORS configuration to allow requests from the frontend.
- Updated frontend components to handle token storage and login status.
- Adjusted form handling in contact us component to improve user experience.
- Cleaned up unused code and comments across various components and services.

--- a/property-rental-service/pom.xml
+++ b/property-rental-service/pom.xml
@@ -35,6 +35,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-mongodb</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.1.0</version>
+	</dependency>
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -51,18 +56,34 @@
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>
-
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-ui</artifactId>
+		<version>1.7.0</version>
+	</dependency>
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
 		<scope>provided</scope>
 	</dependency>
-
 	<dependency>
 		<groupId>io.jsonwebtoken</groupId>
-		<artifactId>jjwt</artifactId>
-		<version>0.9.1</version>
+		<artifactId>jjwt-api</artifactId>
+		<version>0.11.5</version>
 	</dependency>
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-impl</artifactId>
+		<version>0.11.5</version>
+		<scope>runtime</scope>
+	</dependency>
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson -->
+		<version>0.11.5</version>
+		<scope>runtime</scope>
+	</dependency>
+
 
 	<dependency>
 		<groupId>org.springframework.security</groupId>
